force-app/main/default/objects/MotionBoard__mdt/MotionBoard__mdt.object-meta.xml
<CustomObject>
    <description>MotionBoard Cloudのログイン情報</description>
    <label>MotionBoard</label>
</CustomObject>