force-app/main/default/objects/MotionBoard__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>パスワード</label>
    <length>50</length>
    <type>Text</type>
</CustomField>