force-app/main/default/objects/MotionBoard__mdt/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <label>テナントID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>