force-app/main/default/objects/MotionBoard__mdt/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>