force-app/main/default/objects/MotionBoard__mdt/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>ユーザID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>